--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
         <button id="menu">☰</button>
         <ul class="navigation">
             <li><a href="#">Home</a></li>
-            <li><a href="form.html">Form Page</a></li>
-            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="chamber/index.html">Chamber</a></li>
+            <li><a href="">Form Page</a></li>
+            <li><a href="">Site Plan</a></li>
             <li><a href="https://www.byui.edu" target="_blank">BYU-Idaho</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/num/22?lang=eng" target="_blank">Scripture</a></li>
-            <li><a href="scoots/index.html" target="_blank">Scoots</a></li>
         </ul>
     </nav>
     <main>
@@ -56,7 +54,7 @@
         </section>
         <section class="card">
             <h3>Information</h3>     
-            <p>The current temperature in Boynton Beach, FL is<span id="current-temp"></span></p>
+            <p>The current temperature in Philadelphia, PA is<span id="current-temp"></span></p>
             <figure id="home-weather">
                 <img id="weather-icon" src="" alt="">
                 <figcaption></figcaption>
@@ -66,10 +64,10 @@
         </section>
     </main>
     <div class="google-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95975.83205671374!2d-73.2903578665807!3d41.260006573009875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e8091511fccd91%3A0x4f8a645c6ade4bf3!2sTrumbull%2C%20CT%2006611!5e0!3m2!1sen!2sus!4v1705932401423!5m2!1sen!2sus"  width="800" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Home-town"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d195601.3813976226!2d-75.28317995189546!3d40.00238079617112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b7d8d4b54beb%3A0x89f514d88c3e58c1!2sPhiladelphia%2C%20PA!5e0!3m2!1sen!2sus!4v1717427004891!5m2!1sen!2sus" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Home"></iframe>
     </div>
     <footer>
-        <p> &copy; <span id="currentYear"></span> 💠 Kaitlyn Kryzanski 💠 Florida, USA <span> 🇺🇸 </span></p>
+        <p> &copy; <span id="currentYear"></span> 💠 Kaitlyn Kryzanski 💠 Philadelphia, PA USA <span> 🇺🇸 </span></p>
         <p id="lastModified"></p>
 
     </footer>
