--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaitlyn Kryzanski - WDD 230 - Web Frontend Development</title>
+    <title>Kaitlyn Kryzanski - WDD 330 - Web Frontend Development</title>
     <meta name="author" content="Kaitlyn Kryzanski">
-    <meta name="description" content="The home page for the course WDD 230 - Web Frontend Development 
+    <meta name="description" content="The home page for the course WDD 330 - Web Frontend Development II 
     under the author Kaitlyn Kryzanski that will serve as a course assignment portal.">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/base.css">
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <meta property="og:title" content="Homepage - Kaitlyn Kryzanski Web Frontend Development">
+    <meta property="og:title" content="Homepage - Kaitlyn Kryzanski Web Frontend Development II">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fkaitlyn-marie-kryzanski-9398041b1&psig=AOvVaw0ALQFopvuytUp7Z-M0ZXPN&ust=1707585140507000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLjBxr_gnoQDFQAAAAAdAAAAABAE">
     <meta property="og:url" content="https://kmkryz.github.io/wdd230/">
